Fix overlay visibilty issue across small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ main {
 }
 /* hide the overlay div on smaller screens like mobile, tablet */
 .overlay {
-    display: none;
+    visibility:hidden;
 }
 /* Form */
 #join-us {
@@ -259,6 +259,7 @@ main {
         position: relative;
     }
     .overlay {
+        visibility: visible;
         position: absolute; 
         bottom: 0; 
         background: rgb(0, 0, 0);
